--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <!DOCTYPE html>
     <title>Yo-Kai Watch Blasters 2 - Patch FR</title>
     <link rel="icon" href="^1^">
     <style>
