--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </head>
 <body>
     <h1>Yo-Kai Watch Blasters 2 - Patch FR</h1>
-    <img src="^2^" alt="Logo">
+    <img src="https://i.imgur.com/BN5fUde.png" alt="Logo">
     <a href="^3^" class="button">Gamebanana</a>
 </body>
 </html>
