--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
 <body>
     <h1>Yo-Kai Watch Blasters 2 - Patch FR</h1>
     <img src="https://i.imgur.com/BN5fUde.png" alt="Logo">
-    <a href="^3^" class="button">Gamebanana</a>
+    <a href="https://gamebanana.com/wips/76776" class="button">Gamebanana</a>
 </body>
 </html>
