--- a/index.html
+++ b/index.html
@@ -17,10 +17,6 @@
             margin-right: auto;
             width: 50%;
         }
-        a {
-            text-decoration: none;
-            color: #333333;
-        }
         .button {
             display: inline-block;
             padding: 10px 20px;
@@ -37,6 +33,6 @@
 <body>
     <h1>Yo-Kai Watch Blasters 2 - Patch FR</h1>
     <img src="https://i.imgur.com/BN5fUde.png" alt="Logo">
-    <a href="https://gamebanana.com/wips/76776" class="button">Gamebanana</a>
+    <img src="https://i.imgur.com/owYw96P.png" alt="Gamebanana" class="button" onclick="window.location.href='https://gamebanana.com/wips/76776'">
 </body>
 </html>
