--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
 <body>
     <h1>Yo-Kai Watch Blasters 2 - Patch FR</h1>
     <img src="https://i.imgur.com/BN5fUde.png" alt="Logo">
-    <img src="https://i.imgur.com/owYw96P.png" alt="Gamebanana" class="button" onclick="window.location.href='https://gamebanana.com/wips/76776'" width="100">
+    <img src="https://i.imgur.com/owYw96P.png" alt="Gamebanana" class="button" onclick="window.location.href='https://gamebanana.com/wips/76776'" width="25%">
 </body>
 </html>
