--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             border: 1px solid #333333;
             border-radius: 5px;
             background-color: #FFFFFF;
-            font-size: 5px;
+            font-size: 16px;
             position: absolute;
             top: 10px;
             right: 10px;
@@ -33,6 +33,6 @@
 <body>
     <h1>Yo-Kai Watch Blasters 2 - Patch FR</h1>
     <img src="https://i.imgur.com/BN5fUde.png" alt="Logo">
-    <img src="https://i.imgur.com/OExxrBp.png" alt="Gamebanana" class="button" onclick="window.location.href='https://gamebanana.com/wips/76776'" width="10%">
+    <img src="https://i.imgur.com/Hw5seyR.png" alt="Gamebanana" class="button" onclick="window.location.href='https://gamebanana.com/wips/76776'">
 </body>
 </html>
