--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             display: block;
             margin-left: auto;
             margin-right: auto;
-            width: 50%;
+            width: 10%;
         }
         .button {
             display: inline-block;
@@ -33,6 +33,6 @@
 <body>
     <h1>Yo-Kai Watch Blasters 2 - Patch FR</h1>
     <img src="https://i.imgur.com/BN5fUde.png" alt="Logo">
-    <img src="https://i.imgur.com/Hw5seyR.png" alt="Gamebanana" class="button" onclick="window.location.href='https://gamebanana.com/wips/76776'">
+    <img src="https://i.imgur.com/Hw5seyR.png" alt="Gamebanana" class="button" onclick="window.location.href='https://gamebanana.com/wips/76776'" width="10%">
 </body>
 </html>
