--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
             text-align: center;
             color: #333333;
         }
-        img {
+        #logo {
             display: block;
             margin-left: auto;
             margin-right: auto;
-            width: 10%;
+            width: 50%;
         }
         .button {
             display: inline-block;
@@ -32,7 +32,7 @@
 </head>
 <body>
     <h1>Yo-Kai Watch Blasters 2 - Patch FR</h1>
-    <img src="https://i.imgur.com/BN5fUde.png" alt="Logo">
+    <img src="https://i.imgur.com/BN5fUde.png" alt="Logo" id="logo">
     <img src="https://i.imgur.com/Hw5seyR.png" alt="Gamebanana" class="button" onclick="window.location.href='https://gamebanana.com/wips/76776'" width="10%">
 </body>
 </html>
