--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             display: block;
             margin-left: auto;
             margin-right: auto;
-            width: 25%;
+            width: 50%;
         }
         .button {
             display: inline-block;
@@ -27,6 +27,7 @@
             position: absolute;
             top: 10px;
             right: 10px;
+            width: 25%
         }
     </style>
 </head>
