--- a/index.html
+++ b/index.html
@@ -26,14 +26,20 @@
             font-size: 16px;
             position: absolute;
             top: 10px;
-            right: 10px;
             width: 5%
+        }
+        .right {
+            right: 10px;
+        }
+        .left {
+            left: 10px;
         }
     </style>
 </head>
 <body>
     <h1>Yo-Kai Watch Blasters 2 - Patch FR</h1>
     <img src="https://i.imgur.com/BN5fUde.png" alt="Logo" id="logo">
-    <img src="https://i.imgur.com/Hw5seyR.png" alt="Gamebanana" class="button" onclick="window.location.href='https://gamebanana.com/wips/76776'" width="10%">
+    <img src="https://i.imgur.com/Hw5seyR.png" alt="Gamebanana" class="button right" onclick="window.location.href='https://gamebanana.com/wips/76776'" width="10%">
+    <img src="https://i.imgur.com/7Y9Gn8g.png" alt="Discord" class="button left" onclick="window.location.href='https://discord.gg/BkFTpCudWS'" width="10%">
 </body>
 </html>
