--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
     <h1>Yo-Kai Watch Blasters 2 - Patch FR</h1>
     <img src="https://i.imgur.com/BN5fUde.png" alt="Logo" id="logo">
     <img src="https://i.imgur.com/Hw5seyR.png" alt="Gamebanana" class="button right" onclick="window.location.href='https://gamebanana.com/wips/76776'" width="10%">
-    <img src="https://i.imgur.com/7Y9Gn8g.png" alt="Discord" class="button left" onclick="window.location.href='https://discord.gg/BkFTpCudWS'" width="10%">
+    <img src="https://i.imgur.com/of9LPkW.png" alt="Discord" class="button left" onclick="window.location.href='https://discord.gg/BkFTpCudWS'" width="10%">
 </body>
 </html>
