--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <h1>Yo-Kai Watch Blasters 2 - Patch FR</h1>
     <img src="https://i.imgur.com/BN5fUde.png" alt="Logo" id="logo">
     <!-- Ajout du code HTML pour afficher les infobulles des boutons -->
-    <img src="https://i.imgur.com/Hw5seyR.png" alt="Gamebanana" class="button right" onclick="window.location.href='https://gamebanana.com/wips/76776'" width="10%" title="Page Gamebanana">
+    <img src="https://i.imgur.com/k5w3FUG.png" alt="Gamebanana" class="button right" onclick="window.location.href='https://gamebanana.com/wips/76776'" width="10%" title="Page Gamebanana">
     <img src="https://i.imgur.com/of9LPkW.png" alt="Discord" class="button left" onclick="window.location.href='https://discord.gg/BkFTpCudWS'" width="10%" title="Serveur Discord">
 </body>
 </html>
