--- a/index.html
+++ b/index.html
@@ -7,10 +7,6 @@
             font-family: Arial, sans-serif;
             background-color: #F0F0F0;
         }
-        h1 {
-            text-align: center;
-            color: #333333;
-        }
         #logo {
             display: block;
             margin-left: auto;
@@ -39,10 +35,12 @@
             background-color: #EEEEEE;
         }
     </style>
+    <!-- Ajout du code HTML pour afficher le logo à la place du titre -->
+    <img src="https://i.imgur.com/BN5fUde.png" alt="Logo" id="logo" style="position: relative; top: 10px; width: 25%;">
 </head>
 <body>
-    <h1>Yo-Kai Watch Blasters 2 - Patch FR</h1>
-    <img src="https://i.imgur.com/BN5fUde.png" alt="Logo" id="logo">
+    <!-- Suppression du code HTML qui affiche le titre -->
+    <!-- <h1>Yo-Kai Watch Blasters 2 - Patch FR</h1> -->
     <!-- Ajout du code HTML pour afficher les infobulles des boutons -->
     <img src="https://i.imgur.com/k5w3FUG.png" alt="Gamebanana" class="button right" onclick="window.location.href='https://gamebanana.com/wips/76776'" width="10%" title="Page Gamebanana">
     <img src="https://i.imgur.com/of9LPkW.png" alt="Discord" class="button left" onclick="window.location.href='https://discord.gg/BkFTpCudWS'" width="10%" title="Serveur Discord">
