--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
             display: block;
             margin-left: auto;
             margin-right: auto;
-            width: 50%;
+            width: 25%;
+            /* Changement du code CSS pour que le logo soit plus haut */
+            position: relative;
+            top: 5px;
         }
         .button {
             display: inline-block;
@@ -36,7 +39,7 @@
         }
     </style>
     <!-- Ajout du code HTML pour afficher le logo à la place du titre -->
-    <img src="https://i.imgur.com/BN5fUde.png" alt="Logo" id="logo" style="position: relative; top: 10px; width: 25%;">
+    <img src="https://i.imgur.com/BN5fUde.png" alt="Logo" id="logo">
 </head>
 <body>
     <!-- Suppression du code HTML qui affiche le titre -->
