--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             margin-left: auto;
             margin-right: auto;
             width: 25%;
-            /* Changement du code CSS pour que le logo soit plus haut */
+            /* Changement du code CSS pour que le logo soit à 5 pixels du haut */
             position: relative;
             top: 5px;
         }
