--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         .button:hover {
             background-color: #EEEEEE;
         }
-        /* Ajout du code CSS pour positionner le bouton de téléchargement */
+        /* Changement du code CSS pour positionner le bouton de téléchargement à côté du bouton gamebanana */
         .download {
             display: inline-block;
             padding: 10px 20px;
@@ -47,7 +47,7 @@
             position: absolute;
             top: 10px;
             width: 5%;
-            right: calc(50% - (5% / 2));
+            right: 15%;
         }
     </style>
 </head>
