--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <!-- Ajout du code HTML pour afficher les infobulles des boutons -->
     <img src="https://i.imgur.com/k5w3FUG.png" alt="Gamebanana" class="button right" onclick="window.location.href='https://gamebanana.com/wips/76776'" width="10%" title="Page Gamebanana">
     <img src="https://i.imgur.com/of9LPkW.png" alt="Discord" class="button left" onclick="window.location.href='https://discord.gg/BkFTpCudWS'" width="10%" title="Serveur Discord">
-    <!-- Ajout du code HTML pour afficher le bouton de téléchargement -->
-    <img src="https://i.imgur.com/z9EyUNP.png" alt="Télécharger" class="download" onclick="window.location.href='download.html'" title="Télécharger">
+    <!-- Changement du code HTML pour afficher l'infobulle "Téléchargements" sur le bouton de téléchargement -->
+    <img src="https://i.imgur.com/6QZ7XZT.png" alt="Télécharger" class="download" onclick="window.location.href='download.html'" title="Téléchargements">
 </body>
 </html>
