--- a/download.html
+++ b/download.html
@@ -15,11 +15,15 @@
             position: relative;
             top: 5px;
         }
+        /* Changement du code CSS pour positionner le texte au-dessus du bouton */
         #text {
-            text-align: center;
             font-size: 20px;
             color: #333333;
+            position: absolute;
+            bottom: 10px;
+            left: 10px;
         }
+        /* Changement du code CSS pour décaler le bouton vers la droite */
         #button {
             display: inline-block;
             padding: 10px 20px;
@@ -27,8 +31,9 @@
             border-radius: 5px;
             background-color: #FFFFFF;
             font-size: 16px;
-            margin-left: auto;
-            margin-right: auto;
+            position: absolute;
+            bottom: 10px;
+            left: 150px;
         }
         /* Ajout du code CSS pour griser le bouton */
         #button {
