--- a/download.html
+++ b/download.html
@@ -20,7 +20,8 @@
             font-size: 20px;
             color: #333333;
             position: absolute;
-            bottom: 10px;
+            /* Changement du code CSS pour monter le texte plus haut */
+            bottom: 200px;
             left: 10px;
         }
         /* Changement du code CSS pour décaler le bouton vers la droite */
@@ -32,7 +33,8 @@
             background-color: #FFFFFF;
             font-size: 16px;
             position: absolute;
-            bottom: 10px;
+            /* Changement du code CSS pour monter le bouton plus haut */
+            bottom: 200px;
             left: 150px;
         }
         /* Ajout du code CSS pour griser le bouton */
