--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
             width: 5%;
             right: 15%;
         }
+        /* Ajout du code CSS pour changer le curseur de la souris au survol des boutons */
+        .button, .download {
+            cursor: pointer; /* Nouvelle propriété */
+        }
     </style>
 </head>
 <body>
