--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
             position: relative;
             top: 5px;
         }
+        /* Ajout du code CSS pour changer le curseur de la souris au survol du logo */
+        #logo {
+            cursor: pointer; /* Nouvelle propriété */
+        }
         .button {
             display: inline-block;
             padding: 10px 20px;
@@ -52,6 +56,10 @@
         /* Ajout du code CSS pour changer le curseur de la souris au survol des boutons */
         .button, .download {
             cursor: pointer; /* Nouvelle propriété */
+        }
+        /* Ajout du code CSS pour changer la couleur du bouton de téléchargement au survol */
+        .download:hover {
+            background-color: #EEEEEE; /* Nouvelle propriété */
         }
     </style>
 </head>
