--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title>Yo-Kai Watch Blasters 2 - Patch FR</title>
-    <link rel="icon" href="^1^">
+    <link rel="icon" href="https://i.imgur.com/BN5fUde.png">
     <style>
         body {
             font-family: Arial, sans-serif;
