--- a/download.html
+++ b/download.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Yo-Kai Watch Blasters 2 - Patch FR</title>
+    <title>YKWB2 - Patch FR - Téléchargements</title>
     <link rel="icon" href="https://i.imgur.com/BN5fUde.png">
     <style>
         body {
