--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #F0F0F0;
+            /* Changement du code CSS pour mettre une image de fond */
+            background-image: url("https://i.imgur.com/w8uZrov.jpg"); /* Nouvelle propriété */
         }
         #logo {
             display: block;
