--- a/download.html
+++ b/download.html
@@ -5,7 +5,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #F0F0F0;
+            background-image: url("https://i.imgur.com/w8uZrov.jpg");
         }
         #logo {
             display: block;
