--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <html>
 <head>
     <title>Yo-Kai Watch Blasters 2 - Patch FR</title>
-    <link rel="icon" href="https://i.imgur.com/BN5fUde.png">
+    <!-- Changement de l'URL de l'icône d'onglet par le chemin relatif de l'image logo_ywb2.png -->
+    <link rel="icon" href="resources/logo_ywb2.png">
     <style>
         body {
             font-family: Arial, sans-serif;
             /* Changement du code CSS pour mettre une image de fond */
-            background-image: url("https://i.imgur.com/w8uZrov.jpg"); /* Nouvelle propriété */
+            background-image: url("resources/page_bg.png"); /* Nouvelle propriété */
         }
         #logo {
             display: block;
@@ -66,11 +67,11 @@
 </head>
 <body>
     <!-- Ajout du code HTML pour afficher le logo qui redirige vers la page index.html -->
-    <img src="https://i.imgur.com/BN5fUde.png" alt="Logo" id="logo" onclick="window.location.href='index.html'">
+    <img src="resources/logo_ywb2.png" alt="Logo" id="logo" onclick="window.location.href='index.html'">
     <!-- Ajout du code HTML pour afficher les infobulles des boutons -->
-    <img src="https://i.imgur.com/k5w3FUG.png" alt="Gamebanana" class="button right" onclick="window.location.href='https://gamebanana.com/wips/76776'" width="10%" title="Page Gamebanana">
-    <img src="https://i.imgur.com/of9LPkW.png" alt="Discord" class="button left" onclick="window.location.href='https://discord.gg/BkFTpCudWS'" width="10%" title="Serveur Discord">
+    <img src="resources/logo_gb.png" alt="Gamebanana" class="button right" onclick="window.location.href='https://gamebanana.com/wips/76776'" width="10%" title="Page Gamebanana">
+    <img src="resources/logo_ds.png" alt="Discord" class="button left" onclick="window.location.href='https://discord.gg/BkFTpCudWS'" width="10%" title="Serveur Discord">
     <!-- Changement du code HTML pour afficher l'infobulle "Téléchargements" sur le bouton de téléchargement -->
-    <img src="https://i.imgur.com/z9EyUNP.png" alt="Télécharger" class="download" onclick="window.location.href='download.html'" title="Téléchargements">
+    <img src="resources/logo_dl.png" alt="Télécharger" class="download" onclick="window.location.href='download.html'" title="Téléchargements">
 </body>
 </html>
