--- a/download.html
+++ b/download.html
@@ -1,11 +1,11 @@
 <html>
 <head>
     <title>YKWB2 - Patch FR - Téléchargements</title>
-    <link rel="icon" href="https://i.imgur.com/BN5fUde.png">
+    <link rel="icon" href="resources/logo_ywb2.png">
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-image: url("https://i.imgur.com/w8uZrov.jpg");
+            background-image: url("resources/page_bg.png");
         }
         #logo {
             display: block;
@@ -54,7 +54,7 @@
 <body>
     <!-- Ajout du code HTML pour afficher le logo qui redirige vers la page index.html -->
     <!-- Ajout de l'attribut title pour afficher l'infobulle "Accueil" -->
-    <img src="https://i.imgur.com/BN5fUde.png" alt="Logo" id="logo" onclick="window.location.href='index.html'" title="Accueil">
+    <img src="resources/logo_ywb2.png" alt="Logo" id="logo" onclick="window.location.href='index.html'" title="Accueil">
     <!-- Ajout du code HTML pour afficher le texte et le bouton "Télécharger" -->
     <p id="text">Version 1.0 :</p>
     <button id="button">Télécharger</button>
