--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             position: absolute;
             top: 10px;
             width: 5%
+            left: 15%;
         }
         .right {
             right: 10px;
