--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
             position: absolute;
             top: 10px;
             width: 5%
-            left: 15%;
         }
         .right {
             right: 10px;
@@ -67,10 +66,15 @@
             font-size: 16px;
             position: absolute;
             top: 10px;
+            left: 15%;
         }
         /* Ajout du code CSS pour changer la couleur du bouton de crédits au survol */
         .credits:hover {
             background-color: #EEEEEE; 
+        }
+        /* Ajout du code CSS pour changer le curseur en main au survol du bouton de crédits */
+        .credits:hover {
+          cursor:pointer; /* Nouvelle propriété */
         }
     </style>
 </head>
