--- a/credits_page.html
+++ b/credits_page.html
@@ -18,12 +18,12 @@
         #logo {
             cursor: pointer;
         }
-        /* Changement du sélecteur CSS pour utiliser une classe au lieu d'un id */
+        /* Changement du code CSS pour utiliser la position relative au lieu de la position absolue */
         .credits {
             font-size: 20px;
             color: #333333;
-            position: absolute;
-            bottom: 320px;
+            position: relative; /* Nouvelle propriété */
+            margin-bottom: 20px; /* Nouvelle propriété */
             left: 10px;
         }
     </style>
